--- a/src/pages/material/acrylic.astro
+++ b/src/pages/material/acrylic.astro
@@ -2,9 +2,9 @@
 // src/pages/material/acrylic.astro
 // Halaman ini sekarang juga jadi super simpel!
 
-import Layout from '../../layouts/Layout.astro';
-import MaterialDetail from '../../components/MaterialDetail.astro';
-import { MATERIALS, SITE_CONFIG } from '../../utils/constants.js';
+import Layout from '@/layouts/Layout.astro';
+import MaterialDetail from '@/components/MaterialDetail.astro';
+import { MATERIALS, SITE_CONFIG } from '@/utils/constants.js';
 
 // 1. Ambil data spesifik untuk Acrylic dari pusat data
 const material = MATERIALS.find(m => m.id === 'acrylic');
