--- a/src/pages/material/grc.astro
+++ b/src/pages/material/grc.astro
@@ -2,9 +2,9 @@
 // src/pages/material/grc.astro
 // Done. Simpel dan bersih.
 
-import Layout from '../../layouts/Layout.astro';
-import MaterialDetail from '../../components/MaterialDetail.astro';
-import { MATERIALS, SITE_CONFIG } from '../../utils/constants.js';
+import Layout from '@/layouts/Layout.astro';
+import MaterialDetail from '@/components/MaterialDetail.astro';
+import { MATERIALS, SITE_CONFIG } from '@/utils/constants.js';
 
 // 1. Ambil data spesifik untuk GRC dari pusat data
 const material = MATERIALS.find(m => m.id === 'grc');
