--- a/src/pages/material/ply-wood-multiplex.astro
+++ b/src/pages/material/ply-wood-multiplex.astro
@@ -1,10 +1,10 @@
 ---
 // src/pages/material/ply-wood-multiplex.astro
-// Bersih dan rapi.
+// --- FIX MENGGUNAKAN ASTRO ALIAS (@/) ---
 
-import Layout from '../../layouts/Layout.astro';
-import MaterialDetail from '../../components/MaterialDetail.astro';
-import { MATERIALS, SITE_CONFIG } from '../../utils/constants.js';
+import Layout from '@/layouts/Layout.astro';
+import MaterialDetail from '@/components/MaterialDetail.astro';
+import { MATERIALS, SITE_CONFIG } from '@/utils/constants.js';
 
 // 1. Ambil data spesifik untuk Plywood dari pusat data
 const material = MATERIALS.find(m => m.id === 'plywood');
