--- a/src/pages/material/pvc.astro
+++ b/src/pages/material/pvc.astro
@@ -2,9 +2,9 @@
 // src/pages/material/pvc.astro
 // Makin deket ke garis finish.
 
-import Layout from '../../layouts/Layout.astro';
-import MaterialDetail from '../../components/MaterialDetail.astro';
-import { MATERIALS, SITE_CONFIG } from '../../utils/constants.js';
+import Layout from '@/layouts/Layout.astro';
+import MaterialDetail from '@/components/MaterialDetail.astro';
+import { MATERIALS, SITE_CONFIG } from '@/utils/constants.js';
 
 // 1. Ambil data spesifik untuk PVC dari pusat data
 const material = MATERIALS.find(m => m.id === 'pvc');
