--- a/src/pages/material/stainless-steel-metal.astro
+++ b/src/pages/material/stainless-steel-metal.astro
@@ -2,9 +2,9 @@
 // src/pages/material/stainless-steel-metal.astro
 // Yang terakhir dari seri material!
 
-import Layout from '../../layouts/Layout.astro';
-import MaterialDetail from '../../components/MaterialDetail.astro';
-import { MATERIALS, SITE_CONFIG } from '../../utils/constants.js';
+import Layout from '@/layouts/Layout.astro';
+import MaterialDetail from '@/components/MaterialDetail.astro';
+import { MATERIALS, SITE_CONFIG } from '@/utils/constants.js';
 
 // 1. Ambil data spesifik untuk Stainless Steel & Metal dari pusat data
 const material = MATERIALS.find(m => m.id === 'stainless');
