--- a/src/pages/material/ply-wood-multiplex.astro
+++ b/src/pages/material/ply-wood-multiplex.astro
@@ -3,7 +3,7 @@
 // --- FIX MENGGUNAKAN ASTRO ALIAS (@/) ---
 
 import Layout from '@/layouts/Layout.astro';
-import MaterialDetail from '@/components/MaterialDetail.astro';
+import MaterialDetail from '@/MaterialDetail.astro';
 import { MATERIALS, SITE_CONFIG } from '@/utils/constants.js';
 
 // 1. Ambil data spesifik untuk Plywood dari pusat data
