--- a/src/MaterialDetail.astro
+++ b/src/MaterialDetail.astro
@@ -2,7 +2,7 @@
 // src/components/MaterialDetail.astro
 // Ini adalah "CETAKAN" untuk semua halaman detail material.
 
-import { SITE_CONFIG } from '../utils/constants.js';
+import { SITE_CONFIG } from './utils/constants.js';
 
 // Ambil 'material' yang dikirim dari halaman (misal: acrylic.astro)
 const { material } = Astro.props;
