--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 // src/pages/index.astro
 import BaseLayout from '../components/BaseLayout.astro';
-import { SITE_CONFIG, SERVICES, PROJECTS, BLOG_POSTS } from '../utils/constants.js';
+import { SITE_CONFIG, SERVICES, PROJECTS } from '../utils/constants.js';
 ---
 
 <BaseLayout
