--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const {
 const pageTitle = title ? `${title} | ${SITE_CONFIG.name}` : SITE_CONFIG.title;
 
 // Menggunakan base path dari astro.config.mjs untuk link absolut
-const base_url = SITE_CONFIG.url + '/';
+const base_url = import.meta.env.BASE_URL;
 ---
 
 <!doctype html>
@@ -34,18 +34,18 @@ const base_url = SITE_CONFIG.url + '/';
 		<meta charset="UTF-8" />
 		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
-	<meta name="keywords" content={keywords} />
+    <meta name="keywords" content={keywords} />
 		<link rel="icon" type="image/svg+xml" href={`${base_url}favicon.svg`} />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@700&display=swap" rel="stylesheet">
 
 	</head>
 	<body class="bg-charcoal text-metallic-silver font-sans">
-	<Header />
+    <Header />
 		<slot /> <Footer />
 	</body>
 </html>
